vlib/v/parser/tests/method_call_receiver_err.out
vlib/v/parser/tests/method_call_receiver_err.vv:6:2: warning: unused variable: `s1`
    4 | 
    5 | fn main() {
    6 |     s1 := S1{}
      |     ~~
    7 | 
    8 |     $for method in S1.methods {
vlib/v/parser/tests/method_call_receiver_err.vv:8:7: warning: unused variable: `method`
    6 |     s1 := S1{}
    7 | 
    8 |     $for method in S1.methods {
      |          ~~~~~~
    9 |         println(S1.method_hello('yo'))
   10 |     }
vlib/v/parser/tests/method_call_receiver_err.vv:9:11: error: unknown function: S1.method_hello
    7 | 
    8 |     $for method in S1.methods {
    9 |         println(S1.method_hello('yo'))
      |                 ~~~~~~~~~~~~~~~~~~~~~
   10 |     }
   11 | }
vlib/v/parser/tests/method_call_receiver_err.vv:9:3: error: `println` can not print void expressions
    7 | 
    8 |     $for method in S1.methods {
    9 |         println(S1.method_hello('yo'))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   10 |     }
   11 | }
